feat(LST-5): add create product feature

--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -13,6 +13,7 @@
   // Border Colors
   --color-border-primary: #d9d9d9;
   --color-border-disabled: #8c9197;
+  --color-border-error: #e30613;
 
   // Button Colors
   --color-button-primary: #1058dd;
