--- a/src/components/Fields/Select/Select.module.scss
+++ b/src/components/Fields/Select/Select.module.scss
@@ -2,8 +2,8 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  gap: 1.2rem;
-  align-items: center;
+  gap: 0.5rem;
+  align-items: flex-start;
   position: relative;
 
   .field {
