--- a/src/components/Table/components/Rows/Rows.module.scss
+++ b/src/components/Table/components/Rows/Rows.module.scss
@@ -40,6 +40,8 @@
       .value {
         font-size: 1.4rem;
         font-weight: 400;
+        display: flex;
+        flex-direction: row;
       }
 
       .cellContent {
@@ -59,6 +61,8 @@
           overflow: hidden;
           white-space: nowrap;
           text-overflow: ellipsis;
+          display: flex;
+          flex-direction: row;
         }
       }
     }
