feat(LST-5): add delete product features

--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -17,7 +17,7 @@
 
   // Button Colors
   --color-button-primary: #1058dd;
-  --color-button-tertiary: #8c9197;
+  --color-button-tertiary: #e30613;
   --color-button-disabled: #d9d9d9;
 
   --font-primary: googleFont, arial, verdana, tahoma, sans-serif;
