--- a/src/components/BaseButton/BaseButton.module.scss
+++ b/src/components/BaseButton/BaseButton.module.scss
@@ -3,13 +3,13 @@
   max-height: 3.6rem;
   border-radius: 0.4rem;
   border: unset;
-  padding: 1rem 2rem;
+  padding: 1rem 1.6rem;
   position: relative;
   transition: all 100ms ease-in-out;
   cursor: pointer;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   gap: 0.5rem;
   font-weight: 600;
   font-size: 1.4rem;
@@ -54,5 +54,14 @@
 
   svg {
     color: var(--color-text-disabled);
+  }
+}
+
+.tertiary {
+  background-color: var(--color-button-tertiary);
+  color: var(--color-text-secondary);
+
+  svg {
+    color: var(--color-text-secondary);
   }
 }
