--- a/src/components/Table/components/Pagination/Pagination.module.scss
+++ b/src/components/Table/components/Pagination/Pagination.module.scss
@@ -34,8 +34,12 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: flex-end;
+    justify-content: flex-start;
     gap: 0.8rem;
+
+    @include respond(lg) {
+      justify-content: flex-end;
+    }
 
     .select {
       max-width: fit-content;
