--- a/src/components/Fields/Textarea/Textarea.module.scss
+++ b/src/components/Fields/Textarea/Textarea.module.scss
@@ -8,10 +8,12 @@
 .textarea {
   width: 100%;
   border: 1px solid var(--color-border-primary);
+  background-color: transparent;
   padding: 1.2rem 1.6rem;
   outline: none;
   border-radius: 0.8rem;
   overflow: scroll;
+  color: var(--color-text-primary);
 
   &.disabled {
     cursor: not-allowed;
