--- a/src/components/Table/components/Rows/Rows.module.scss
+++ b/src/components/Table/components/Rows/Rows.module.scss
@@ -36,6 +36,7 @@
         font-weight: 400;
         display: flex;
         flex-direction: row;
+        color: var(--color-text-primary);
       }
 
       .cellContent {
@@ -61,6 +62,7 @@
           text-overflow: ellipsis;
           display: flex;
           flex-direction: row;
+          color: var(--color-text-primary);
         }
       }
     }
