--- a/src/filters/ProductsFilters/ProductsFilters.module.scss
+++ b/src/filters/ProductsFilters/ProductsFilters.module.scss
@@ -16,6 +16,7 @@
       align-items: center;
       justify-content: space-between;
       gap: 1rem;
+      color: var(--color-text-primary);
     }
   }
 
