--- a/src/components/Fields/Textarea/Textarea.module.scss
+++ b/src/components/Fields/Textarea/Textarea.module.scss
@@ -9,7 +9,7 @@
   width: 100%;
   border: 1px solid var(--color-border-primary);
   background-color: transparent;
-  padding: 1.2rem 1.6rem;
+  padding: 0.8rem;
   outline: none;
   border-radius: 0.8rem;
   overflow: scroll;
