--- a/src/components/Fields/Select/Select.module.scss
+++ b/src/components/Fields/Select/Select.module.scss
@@ -25,13 +25,6 @@
       align-items: center;
       gap: 1.2rem;
 
-      .value {
-        font-size: 1.6rem;
-        font-weight: 600;
-        text-align: right;
-        color: var(--color-text-primary);
-      }
-
       svg {
         color: var(--color-text-primary);
       }
@@ -40,15 +33,11 @@
     .selectError {
       border-color: var(--color-border-error);
     }
-
-    .error {
-      text-align: right;
-    }
   }
 }
 
-.options-list {
-  max-height: 200px;
+.optionsList {
+  max-height: 20rem;
   overflow-y: auto;
   border: 1px solid var(--color-border-primary);
   background-color: var(--primary);
@@ -59,13 +48,6 @@
   display: flex;
   flex-direction: column;
   gap: 0.8rem;
-
-  .searchInput {
-    border-radius: 0.5rem;
-    padding: 0.5rem;
-    outline: none;
-    border: 1px solid var(--color-border-primary);
-  }
 }
 
 .option {
